--- a/Projects/w3_band/index.html
+++ b/Projects/w3_band/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/slider.css">
     <link rel="stylesheet" href="assets/css/content.css">
@@ -44,9 +45,11 @@
             <!-- End Search -->
         </div>
 
-
         <div id="slider">
-
+            <div id="text-content">
+                <h2 class="text-heading">Lorem, ipsum.</h2>
+                <div class="text-description">Lorem ipsum dolor sit amet.</div>
+            </div>
         </div>
 
         <div id="content">
